--- a/login_femcoders/static/css/estilologin.css
+++ b/login_femcoders/static/css/estilologin.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+
+*{
+    font-family:'Dosis', sans-serif;
+
+}
+
 li {
     list-style: none;
     text-align: center;
@@ -7,6 +14,8 @@ body{
     justify-content: center;
     align-items: center;
     margin:100px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .contenedorLogin{
@@ -50,13 +59,3 @@ input{
     color: #FF4700;
 }
 
-.boton{
-    width: 170px;
-    height: 55px;
-    background: #4311B9;
-    border-radius: 25px;
-    display:block;
-    margin:auto;
-    color: #ffffff;
-    font-size: medium;
-}
