--- a/login_femcoders/templates/nuevaEvaluacion.html
+++ b/login_femcoders/templates/nuevaEvaluacion.html
@@ -5,11 +5,11 @@
 
 
  <form method ="POST">
-     <div>
+     <div class="nuevo">
             {{formaNuevaEvaluacion}}
-            <button type="submit">Validar</button>
+         <button type="submit" class="button2">Validar</button>
             {% csrf_token %}
-
      </div>
  </form>
+
 {% endblock content %}
