--- a/login_femcoders/templates/EditarNota.html
+++ b/login_femcoders/templates/EditarNota.html
@@ -7,9 +7,9 @@
  <form method ="POST">
      <div>
             {{nota}}
-            <button type="submit">Validar</button>
+         <button type="submit" class="buttoneditar">Validar</button>
             {% csrf_token %}
-
      </div>
  </form>
+
 {% endblock content %}
