--- a/login_femcoders/templates/base.html
+++ b/login_femcoders/templates/base.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E
-    <link rel="preconnect" href="https://fonts.gstatic.com%22 crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap%22 rel="stylesheet">
-    <title>Evaluación</title>
+    <title>FemCoders</title>
 </head>
 <body>
     <section class="contenedorLogin">
@@ -22,13 +19,13 @@
                 {% endblock content %}
         </div>
     </section>
-    <footer>
         <div class="bloqueiconos">
+            <a href="{% url 'evaluacion' %}">
             <button class="boton">Atrás</button>
-            <a href="login.html">
+            </a>
+            <a href="#">
             <button class="boton">Cerrar sesión</button>
             </a>
         </div>
-    </footer>
 </body>
 </html>
