--- a/login_femcoders/templates/perfilAlumno.html
+++ b/login_femcoders/templates/perfilAlumno.html
@@ -4,17 +4,35 @@
 {% block content %}
 
     <h1>Perfil Alumno</h1>
-    <div>id Alumno:{{alumno.id}}</div>
-    <div>nombre:{{alumno.nombre}}</div>
-    <div>apellido:{{alumno.apellido}}</div>
-    <div>email:{{alumno.email}}</div>
-    <div>dni:{{alumno.dni}}</div>
 
-    <a href="{% url 'evaluacion' %}">
-    <button>volver</button>
+<div class="tabla">
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Alumno</th>
+                <th>Apellido</th>
+                <th>Email</th>
+                <th>DNI</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{alumno.id}}</td>
+                <td>{{alumno.nombre}}</td>
+                <td>{{alumno.apellido}}</td>
+                <td>{{alumno.email}}</td>
+                <td>{{alumno.dni}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+ <a href="{% url 'evaluacion' %}">
+    <button class="button3">Volver</button>
     </a>
 
 {% endblock content %}
+
 
 
 
